objects/Key_Task_to_Epic__c.object
<CustomObject>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relate a Key Task to G.A. to an Epic</description>
        <inlineHelpText>Relate a Key Task to G.A. to an Epic</inlineHelpText>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>Key Tasks to Epics</relationshipLabel>
        <relationshipName>Key_Tasks_to_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key_Task_to_G_A__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Key Task to G.A.</label>
        <referenceTo>Key_Task_to_G_A__c</referenceTo>
        <relationshipLabel>Key Tasks to Epics</relationshipLabel>
        <relationshipName>Key_Tasks_to_Epics</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Key Task to Epic</label>
    <nameField>
        <displayFormat>KTE-{0000}</displayFormat>
        <label>Key Task to Epic Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Tasks to Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>